--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "chess0",
+  "name": "ChessStudy",
   "version": "1.0.0",
   "description": "An online chess website",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "index.js"
   },
   "author": "Aveek Saha",
   "license": "ISC",
+  "engines": {
+    "node": "12.17.0"
+  },
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
