--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.4.11",
     "socket.io": "^2.1.1"
   }
 }
